(fix): merge request image and gray tick (fix): style-2 responsiveness on mobile resolutions (fix): more accurate margins

--- a/src/app/common/components/marketing/styles/general.scss
+++ b/src/app/common/components/marketing/styles/general.scss
@@ -204,8 +204,8 @@
 
     .m-marketing__imageTick--left {
       position: absolute;
-      bottom: 8px;
-      left: -45px;
+      bottom: 62px;
+      left: -21px;
 
       @media screen and(min-width: $max-mobile) and (max-width: $m-grid-min-vp) {
         bottom: -23%;
